--- a/2DTest.vcproj
+++ b/2DTest.vcproj
@@ -377,6 +377,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\resource1.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
