--- a/2DTest.vcproj
+++ b/2DTest.vcproj
@@ -381,6 +381,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Stat.h"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.h"
 				>
 			</File>
